2000-03-04  Christopher James Lahey  <clahey@helixcode.com>

	* message-list.c: Change this to use the ETable widget itself
	instead of building it from all the parts.

2000-03-03  Christopher James Lahey  <clahey@helixcode.com>

	* message-list.c: Ref the table columns since we unref them at the
	end.

2000-03-01  Ettore Perazzoli  <ettore@helixcode.com>

	* Makefile.am (INCLUDES): Add `$(top_srcdir)'.  Also, the
	`top_srcdir' includes must come first everything else to avoid
	including installed headers instead of our fresh ones.

2000-02-28  NotZed  <NotZed@HelixCode.com>

	* Makefile.am (evolution_mail_LDADD): Fixed references to eutil.

2000-02-24  Christopher James Lahey  <clahey@helixcode.com>

	* message-list.c: Changed to match new e_table_simple interface.

2000-02-24  Dan Winship  <danw@helixcode.com>

	* message-list.c (message_list_set_folder): update for CamelFolder
	changes

2000-02-24  Christopher James Lahey  <clahey@helixcode.com>

	* message-list.c: Changed this to not use the "x" and "y"
	arguments to e-table-item.

2000-02-23  Matt Loper  <matt@helixcode.com>

	* message-list.c (message_list_set_folder): Check 'desc'riptions
	of exceptions.

2000-02-22  bertrand  <Bertrand.Guiheneuf@aful.org>

	* message-list.c (message_list_set_folder): 
	fix to show a sample correct implementation. 

2000-02-21  Matt Loper  <matt@helixcode.com>

	* Makefile.am: added -lunicode to evolution_mail_LDADD.

2000-02-21  Dan Winship  <danw@helixcode.com>

	* session.c (session_store_new): Pass a CamelAuthCallback
	(evolution_auth_callback) to camel_session_new.
	
2000-02-21  Dan Winship  <danw@helixcode.com>

	* session.c (session_store_new): Update session_store_new to
	deal with the fact that camel_session_get_store takes a
	CamelException now. Doesn't actually do anything with the
	exception yet, because nothing else does yet either.

2000-02-19  Matt Loper  <matt@helixcode.com>

	* .cvsignore: added test-mail.

2000-02-14  Miguel de Icaza  <miguel@gnu.org>
