@@ -35,16 +35,19 @@ folder_browser_factory (BonoboGenericFactory *factory, void *closure)
 	folder_browser_set_uri (FOLDER_BROWSER (folder_browser), "inbox");
 	
 	control = bonobo_control_new (folder_browser);
+	
 	if (control == NULL){
 		gtk_object_destroy (GTK_OBJECT (folder_browser));
 		return NULL;
 	}
 	
-	bonobo_control_set_property_bag (
+	
+	/*bonobo_control_set_property_bag (
 		control,
-		FOLDER_BROWSER (folder_browser)->properties);
+		FOLDER_BROWSER (folder_browser)->properties);*/
 
 	return BONOBO_OBJECT (control);
+
 }
 
 void
